# Tiger-Compiler

./: .gitignore  tiger.cabal
src/: CodeGen.hs  IR.hs  Lexer.x  Main.hs  MipsGen.hs  Parser.y  lexer.x
tests/: break  factorialRecursive  for  maximum  naivePrime  sum
