name:                Tiger
version:             0.0.1
synopsis:            Tiger
description:         Simple Tiger Compiler
author:              André Cerqueira & Simão Gautier
maintainer:          up201804991 & up201805175
category:            Language
build-type:          Simple
cabal-version:       >=1.10
                     
executable Main
  main-is:             Main.hs
  other-modules:       Lexer,Parser,CodeGen,IR
  build-tools:         alex,happy
  build-depends:       base,array,containers,mtl
  hs-source-dirs:      src
  default-language:    Haskell2010

